if(BUILD_UNIT_TESTS)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUNIT_TEST -DBVAR_NOT_LINK_DEFAULT_VARIABLES")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DUNIT_TEST")
elseif(NOT DEBUG)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNDEBUG")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DNDEBUG")
endif()

add_library(base_objects OBJECT ${BASE_SOURCES})
set_property(TARGET ${base_objects} PROPERTY POSITION_INDEPENDENT_CODE 1)

file(COPY "${PROJECT_SOURCE_DIR}/log/" 
    DESTINATION "${CMAKE_BINARY_DIR}/output/include/log/"
    FILES_MATCHING PATTERN "*.h")
