if(BUILD_UNIT_TESTS)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUNIT_TEST -DBVAR_NOT_LINK_DEFAULT_VARIABLES")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DUNIT_TEST")
elseif(NOT DEBUG)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNDEBUG")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DNDEBUG")
endif()

MESSAGE(STATUS "This is cmake SOURCE dir:" ${CMAKE_SOURCE_DIR})
MESSAGE(STATUS "This is project SOURCE dir:" ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "source:" ${LOG_SOURCES})
add_library(${LOG_LIB} SHARED ${LOG_SOURCES})
ADD_LIBRARY(${LOG_LIB}-static STATIC ${LOG_SOURCES})

# shared library needs POSITION_INDEPENDENT_CODE
set_property(TARGET ${LOG_LIB} PROPERTY POSITION_INDEPENDENT_CODE 1)
set_property(TARGET ${LOG_LIB}-static PROPERTY POSITION_INDEPENDENT_CODE 1)

set_property(TARGET ${LOG_LIB}-static PROPERTY OUTPUT_NAME ${LOG_LIB})
set_property(TARGET ${LOG_LIB} PROPERTY CLEAN_DIRECT_OUTPUT ${LOG_LIB})

file(COPY "${PROJECT_SOURCE_DIR}/log/" 
    DESTINATION "${CMAKE_BINARY_DIR}/output/include/log/"
    FILES_MATCHING PATTERN "*.h")
