if(BUILD_UNIT_TESTS)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUNIT_TEST -DBVAR_NOT_LINK_DEFAULT_VARIABLES")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DUNIT_TEST")
elseif(NOT DEBUG)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNDEBUG")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DNDEBUG")
endif()

MESSAGE(STATUS "This is cmake SOURCE dir:" ${CMAKE_SOURCE_DIR})
MESSAGE(STATUS "This is project SOURCE dir:" ${PROJECT_SOURCE_DIR})

add_library(log_objects OBJECT ${LOG_SOURCES})
set_property(TARGET ${log_objects} PROPERTY POSITION_INDEPENDENT_CODE 1)

add_library(${LOG_LIB_NAME}-shared SHARED $<TARGET_OBJECTS:log_objects> $<TARGET_OBJECTS:base_objects>)
ADD_LIBRARY(${LOG_LIB_NAME}-static STATIC $<TARGET_OBJECTS:log_objects> $<TARGET_OBJECTS:base_objects>)

SET_TARGET_PROPERTIES(${LOG_LIB_NAME}-static PROPERTIES OUTPUT_NAME ${LOG_LIB_NAME} CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(${LOG_LIB_NAME}-shared PROPERTIES OUTPUT_NAME ${LOG_LIB_NAME} CLEAN_DIRECT_OUTPUT 1)

file(COPY "${PROJECT_SOURCE_DIR}/log/" 
    DESTINATION "${CMAKE_BINARY_DIR}/output/include/log/"
    FILES_MATCHING PATTERN "*.h")
