if(BUILD_UNIT_TESTS)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUNIT_TEST -DBVAR_NOT_LINK_DEFAULT_VARIABLES")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DUNIT_TEST")
elseif(NOT DEBUG)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNDEBUG")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DNDEBUG")
endif()

add_library(rpc_objects OBJECT ${RPC_SOURCES})
set_property(TARGET ${rpc_objects} PROPERTY POSITION_INDEPENDENT_CODE 1)

add_library(${RPC_LIB_NAME}-shared SHARED $<TARGET_OBJECTS:rpc_objects> $<TARGET_OBJECTS:log_objects>)
ADD_LIBRARY(${RPC_LIB_NAME}-static STATIC $<TARGET_OBJECTS:rpc_objects> $<TARGET_OBJECTS:log_objects>)

SET_TARGET_PROPERTIES(${RPC_LIB_NAME}-static PROPERTIES OUTPUT_NAME ${RPC_LIB_NAME} CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(${RPC_LIB_NAME}-shared PROPERTIES OUTPUT_NAME ${RPC_LIB_NAME} CLEAN_DIRECT_OUTPUT 1)

file(COPY "${PROJECT_SOURCE_DIR}/rpc/" 
    DESTINATION "${CMAKE_BINARY_DIR}/output/include/rpc/"
    FILES_MATCHING PATTERN "*.h")
